--- a/frontend/src/app/browse-influencer/browse.module.css
+++ b/frontend/src/app/browse-influencer/browse.module.css
@@ -30,3 +30,17 @@
     height: 35px;
     width: 10vw;
 }
+.btn{
+    width: 200px;
+    height: 50px;
+    color: blue;
+    border-radius: 22px;
+    border: 2px solid blue;
+    margin-left: 50vw;
+    margin-top: 80px;
+}
+.btn:hover{
+    color: black;
+    background-color: lightcoral;
+
+}
